k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: teste-argo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: teste-argo
  template:
    metadata:
      labels:
        app: teste-argo
    spec:
      containers:
        - name: teste-argo
          image: oliveirahr/teste-argo:latest
          ports:
            - containerPort: 3000
