k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: teste-argo-service
spec:
  selector:
    app: teste-argo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: LoadBalancer
