k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: teste-argo-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: teste.argo.rancher.hro.dev.br
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: teste-argo-service
                port:
                  number: 80
